fix selection color, more contrast

--- a/public/stylesheets/less/timer.less
+++ b/public/stylesheets/less/timer.less
@@ -1,5 +1,5 @@
 @white: #ffffff;
-@gray: #a4a4a4;
+@gray: #ccc;
 @blue: #407996;
 @blue-light: #90bdd4;
 
@@ -51,22 +51,22 @@ body, input, select, textarea{
 
 body {
 	::selection {
-		background: @blue-light; /* Safari */
+		background: @gray; /* Safari */
 		color: @white;
 	}
 	::-moz-selection {
-		background: @blue-light; /* Firefox */
+		background: @gray; /* Firefox */
 		color: @white;
 	}
 
 	h1 {
 		font-size: 32px;
 		font-weight: 700;
-		margin-bottom: 130px;
+		margin-bottom: 80px;
 	}
 
 	table {
-		margin: 0px auto 120px auto;
+		margin: 0px auto 60px auto;
 
 		.colon {
 			font-size: 56px;
@@ -111,7 +111,7 @@ body {
 	}
 
 	p.copyright {
-		margin-top: 130px;
+		margin-top: 100px;
 		font-size: 14px;
 		color: @gray;
 	}
